[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | migrations
    | __pycache__
)/
'''

[tool.mypy]
#plugins = "sqlalchemy.ext.mypy.plugin"
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = false
[tool.pdm]
distribution = true

[project]
name = "my_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Виктор Сагалаков", email = "sagalakov.viktor@gmail.com"},
]
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "Deprecated==1.2.18",
    "distro==1.9.0",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "idna==3.10",
    "isort==6.0.1",
    "magic-filter==1.0.12",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "mccabe==0.7.0",
    "multidict==6.5.0",
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "netaddr==1.3.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "pycodestyle==2.14.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyflakes==3.4.0",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
    "SQLAlchemy==2.0.41",
    "typing-inspection==0.4.1",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "yookassa==3.5.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "flake8-pie>=0.16.0",
    "isort>=6.0.1",
]
